feat: introduce  endpoint probe
