# common/swagger/v1openapi3/swagger.json
@@ -67,6 +67,38 @@
         }
       }
     },
+    "/readyz": {
+      "get": {
+        "tags": [
+          "heath"
+        ],
+        "summary": "Readiness check",
+        "description": "Checks if the model schema can be retrieved successfully.",
+        "operationId": "getReadyz", 
+        "responses": {
+          "200": {
+            "description": "Model is ready",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Model not ready",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/model/sample_request": {
       "get": {
         "tags": [
